# PluginsPP

./: .gitignore  .gitmodules  CMakeLists.txt  DebugPlugin.cpp  LICENSE  README.md  counter.cpp  dynamic_plugin_handle.hpp  handle.hpp  main.cpp  native_impl.cpp  plugin.cpp  plugin.hpp  plugin_base.hpp  plugin_handle.hpp  plugin_manager.hpp  test.cpp
plugin/: cr.h  function_registry.hpp  plugin_base.hpp
test/: CallPlugin.cpp  DebugPlugin.cpp  RegisterPlugin.cpp  main.cpp  plugin.cpp  test.cpp
wasmVM/: CMakeLists.txt
